k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5433
        command: ["docker-entrypoint.sh"]
        args: ["-p", "5433"]

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ywti-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ywti-app
  template:
    metadata:
      labels:
        app: ywti-app
    spec:
      containers:
      - name: ywti-app
        image: gyro0/ywti:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
