k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
  - port: 5433
    targetPort: 5433

---
apiVersion: v1
kind: Service
metadata:
  name: ywti-app
spec:
  type: ClusterIP # ClusterIP for internal communication
  selector:
    app: ywti-app
  ports:
  - port: 80
    targetPort: 8080
